# AutoPoly

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README-zh.md  README.md  main.cpp  ppcg_wrapper.c
.github/workflows/: ci.yml
cmake/: ConfigDEPS.cmake  ConfigISL.cmake  ConfigPET.cmake  ConfigPPCG.cmake  FindClang.cmake  FindGMP.cmake  FindLLVM.cmake  FindMPFR.cmake  FindYAML.cmake  isl_config.h.cmake  pet_config.h  pet_config.h.cmake
include/: ppcg_wrapper.h
include/AutoPoly/: Config.h  ppcg_wrapper.h
include/AutoPoly/Analysis/: DependenceAnalysis.h  PolyhedralExtraction.h
include/AutoPoly/CodeGen/: AffineCodeGeneration.h
include/AutoPoly/Passes/: AutoPolyPasses.h
include/AutoPoly/Scheduling/: SchedulingStrategy.h
include/AutoPoly/Transform/: SchedulingTransform.h
lib/: CMakeLists.txt  main.cpp  ppcg_wrapper.c
lib/Analysis/: CMakeLists.txt  DependenceAnalysis.cpp  PolyhedralExtraction.cpp  PolyhedralUtils.cpp
lib/CodeGen/: AffineCodeGeneration.cpp  CMakeLists.txt
lib/Passes/: AutoPolyPasses.cpp  CMakeLists.txt
lib/Scheduling/: CMakeLists.txt  SchedulingStrategy.cpp  SchedulingStrategyManager.cpp
lib/Transform/: CMakeLists.txt  SchedulingTransform.cpp
lib/ppcg_wrapper/: ppcg_wrapper.c
scripts/: build.sh  llvm-build.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Analysis/: CMakeLists.txt  PolyhedralExtractorTest.cpp  complex-affine.mlir  dependence-analysis.mlir  polyhedral-extraction.mlir
test/CodeGen/: CMakeLists.txt  codegen_basic.mlir
test/Passes/: CMakeLists.txt  pipeline_passes.mlir
test/Scheduling/: CMakeLists.txt  scheduling_cpu_gpu.mlir
test/Transform/: CMakeLists.txt  fusion.mlir  parallelization.mlir  skewing.mlir  tiling.mlir
tools/: CMakeLists.txt  autopoly-c-opt.cpp  autopoly-mlir-opt.cpp
unittests/: CMakeLists.txt  TestUtils.cpp  TestUtils.h
unittests/Analysis/: CMakeLists.txt  DependenceAnalysisTest.cpp  PolyhedralExtractionTest.cpp
unittests/CodeGen/: AffineCodeGenerationTest.cpp  CMakeLists.txt
unittests/Passes/: CMakeLists.txt  PassesTest.cpp
unittests/Scheduling/: CMakeLists.txt  SchedulingStrategyTest.cpp
unittests/Transform/: CMakeLists.txt  SchedulingTransformTest.cpp
